# radeco

./: .appveyor.yml  .gitignore  .travis.yml  COPYRIGHT  Cargo.toml  Makefile  README.md  appveyor.yml  index.html  rustfmt.toml  search-index.js
arch-rs/: Cargo.toml  README.md
esil-rs/: Cargo.toml  LICENSE  README.md  rustfmt.toml
esil-rs/fuzz/: Cargo.toml
esil-rs/fuzz/fuzzers/: parser.rs
ex-bins/: constprop.asm  simple.c  simple2  simple2.c
examples/: arguments.rs  constraint_solver.rs  esil_shell.rs  project.rs
minidec/: README.md  cli.rs  main.rs
radeco/: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
radeco-lib/: Cargo.toml  appveyor.yml  build.rs  rustfmt.toml
radeco-lib/analysis/: patterns
radeco-lib/ex-bins/: constprop.asm  simple
radeco-lib/examples/: constraint_solver.rs  project.rs
radeco-lib/src/: lib.rs
radeco-lib/src/analysis/: analyzer.rs  arithmetic.rs  constraint_set.rs  cse.rs  dce.rs  engine.rs  interproc.rs  mask2narrow.rs  mod.rs  sccp.rs
radeco-lib/src/analysis/copy_propagation/: mod.rs
radeco-lib/src/analysis/cse/: cse.rs  ssasort.rs
radeco-lib/src/analysis/dom/: domtree.rs  index.rs  mod.rs
radeco-lib/src/analysis/functions/: fix_ssa_opcalls.rs  infer_regusage.rs  mod.rs
radeco-lib/src/analysis/inst_combine/: combine_rules.rs  mod.rs
radeco-lib/src/analysis/interproc/: digstack.rs  fixcall.rs  interproc.rs  summary.rs  transfer.rs
radeco-lib/src/analysis/matcher/: gmatch.rs
radeco-lib/src/analysis/propagate/: control.rs  data.rs
radeco-lib/src/analysis/reference_marking/: mod.rs  reference_marking_inter.rs  reference_marking_intra.rs
radeco-lib/src/analysis/tie/: structs.rs
radeco-lib/src/analysis/valueset/: knownbits.rs  sintmultiple.rs  strided_interval.rs  test.rs  uintrange.rs
radeco-lib/src/analysis/vsa/: abstract_set.rs  mod.rs
radeco-lib/src/analysis/vsa/abstract_set/: abstract_set.rs  bdd.rs  strided_interval.rs
radeco-lib/src/backend/ctrl_flow_struct/: ast.rs  dedup_conds.rs  export.rs  mod.rs  refinement.rs  test.rs
radeco-lib/src/backend/ctrl_flow_struct/condition/: mod.rs
radeco-lib/src/backend/ctrl_flow_struct/graph_utils/: ix_bit_set.rs  mod.rs  test.rs
radeco-lib/src/backend/lang_c/: c_ast.rs  c_cfg_builder.rs  mod.rs  test.rs
radeco-lib/src/backend/lang_c/c_cfg/: ctrl_flow_struct.rs  mod.rs
radeco-lib/src/backend/x86/: x86_idioms.rs
radeco-lib/src/frontend/: bindings.rs  containers.rs  imports.rs  llanalyzer.rs  mod.rs  radeco_containers.rs  radeco_source.rs  source.rs  ssaconstructor.rs
radeco-lib/src/middle/: dot.rs  ir.rs  ir_writer.rs  phiplacement.rs
radeco-lib/src/middle/ir_reader/: lowering.rs  mod.rs  parser.lalrpop  simple_ast.rs  test.rs
radeco-lib/src/middle/regfile/: mod.rs  regmap.rs  regusage.rs
radeco-lib/src/middle/ssa/: cfg_traits.rs  error.rs  graph_traits.rs  memoryssa.rs  ssa_traits.rs  ssadot.rs  ssaquote.rs  ssastorage.rs  utils.rs  verifier.rs
radeco-lib/src/utils/: logger.rs  mod.rs
radeco-lib/test_files/: bin1_main_ssa  bin_ls_instructions.json  ct1_instructions.json  file  mt1_instructions.json
radeco-lib/test_files/bin1_filesource/: bin1_entrypoint.json  bin1_function_main.json  bin1_function_sym.__do_global_dtors_aux.json  bin1_function_sym.__libc_csu_fini.json  bin1_function_sym._fini.json  bin1_function_sym.deregister_tm_clones.json  bin1_function_sym.imp.__isoc99_scanf.json  bin1_function_sym.imp.puts.json  bin1_imports.json  bin1_insts_0x400480.json  bin1_insts_0x400490.json  bin1_insts_0x400630.json  bin1_insts_0x4006A0.json  bin1_libraries.json  bin1_locals_4195741.json  bin1_register_profile.json  bin1_relocs.json  bin1_sections.json  bin1_strings.json
radeco-lib/test_files/bin1_filesource/bin1_out/: main
radeco-lib/test_files/bin_file/: bin_file_flags.json  bin_file_insts_0x15E8.json  bin_file_insts_0x1620.json  bin_file_insts_0x1640.json  bin_file_insts_0x1650.json  bin_file_insts_0x1680.json  bin_file_insts_0x16A0.json  bin_file_insts_0x16E0.json  bin_file_insts_0x1700.json  bin_file_insts_0x1710.json  bin_file_insts_0x1730.json  bin_file_insts_0x1750.json  bin_file_insts_0x17A0.json  bin_file_insts_0x17B0.json  bin_file_insts_0x17C0.json  bin_file_insts_0x17D0.json  bin_file_insts_0x1810.json  bin_file_insts_0x1830.json  bin_file_insts_0x1850.json  bin_file_insts_0x1870.json  bin_file_insts_0x1A5F.json  bin_file_insts_0x1E4C.json  bin_file_insts_0x2670.json  bin_file_insts_0x2AB0.json  bin_file_strings.json
radeco-lib/test_files/ct1_sccp_ex/: ct1_sccp_ex_flags.json  ct1_sccp_ex_insts_0x400390.json  ct1_sccp_ex_insts_0x4003C0.json  ct1_sccp_ex_insts_0x4003D0.json  ct1_sccp_ex_insts_0x400460.json  ct1_sccp_ex_insts_0x4005B4.json  ct1_sccp_ex_sections.json
radeco-lib/tests/: bin_file_test.rs  lib.rs  test1.rs
radeco/p/: Makefile  core_pdd.c  radeco_pdd.c
radeco/plugin/: Makefile  radeco_pdd.c  radeco_pde.c
radeco/scripts/: install-dependencies.sh
radeco/src/: _radeco.rs  args.rs  cli.rs  core.rs  errors.rs  highlighting.rs  logger.rs  main.rs  radeco.rs  structs.rs
radeco/src/c/: core_pdd.c
radeco/tests/hello/: Makefile  hello.c
radeco_lib/: index.html  sidebar-items.js
rune/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rune/examples/: simple_example.rs
rune/runec/: console.rs  interact.rs  main.rs
rune/src/: context.rs  engine.rs  explorer.rs  lib.rs  memory.rs  regstore.rs  utils.rs
rune/src/context/: context.rs  error.rs  rune_ctx.rs
rune/src/engine/: engine.rs  rune.rs
rune/src/explorer/: bfs.rs  dfs.rs  directed.rs  error.rs  explorer.rs  interactive.rs
rune/src/memory/: error.rs  memory.rs  qword_mem.rs  seg_mem.rs
rune/src/regstore/: error.rs  regfile.rs  regstore.rs
rune/src/stream/: error.rs  mod.rs
rune/src/utils/: error.rs  logger.rs  state.rs  utils.rs
scripts/: bug-digger.sh  genpng.sh  gensvg.sh  gh-pages.sh  install-dependencies.sh
specs/: README.md  ssaconstruction.md
src/: ir.rs  lib.rs  main.rs
test-bins/: bin1
test_files/: bin1_main_ssa  loopy_main_ssa  tiny_sccp_test_instructions.json  x86_register_profile.json
(+477 files in other folders)
