[package]
name = "radeco-lib"
version = "0.1.0"
authors = [
	"David Kreuter <dkreuter@gmail.com>",
	"Sushant Dinesh <sushant.dinesh94@gmail.com>"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "minidec"
path = "minidec/main.rs"

[features]
default = []
trace_log = []

[dependencies]
regex = "*"
petgraph = "^0.4.0"
num = "*"
rustc-serialize = "*"
lazy_static = "*"
log = "*"
clippy = {version = "0.0.61", optional = true}

[dependencies.r2pipe]
#git = "https://github.com/radare/r2pipe.rs"
path = "../r2pipe.rs"

[dependencies.esil]
git = "https://github.com/radare/esil-rs"
#path = "../esil-rs"
