[package]
name = "radeco-lib"
version = "0.1.0"
authors = [
	"David Kreuter <dkreuter@gmail.com>",
	"Sushant Dinesh <sushant.dinesh94@gmail.com>"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "minidec"
path = "minidec/main.rs"

[features]
default = []
trace_log = []

[dependencies]
regex = "*"
petgraph = "^0.4.0"
num = "*"
serde_json="*"
lazy_static = "*"
log = "*"
docopt = "*"
env_logger = "*"
clippy = {version = "0.0.61", optional = true}
rayon = "0.8.2"
cpuprofiler = "*"

[dependencies.r2pipe]
git = "https://github.com/radare/r2pipe.rs"

[dependencies.r2api]
git = "https://github.com/radare/radare2-r2pipe-api"
#path = "../radare2-r2pipe-api/rust/"

[dependencies.esil]
git = "https://github.com/radare/esil-rs"
#path = "../esil-rs"

[dependencies.capstone_rust]
git = "https://github.com/sushant94/capstone-rust"
