[workspace]
members = [
	"arch-rs",
	"esil-rs",
	"radeco-lib",
	"radeco",
	"rune"
]
exclude = [
	"ex-bins",
	"examples",
	"scripts",
	"specs",
	"test_files",
	"tests"
]

[profile.release]
lto = true
opt-level = 2
codegen-units = 4

[profile.dev]
lto = false
opt-level = 0
codegen-units = 4

# https://github.com/sfackler/rust-openssl/issues/994
#[replace]
#"openssl:0.9.24" = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
