[package]
name = "radeco-lib"
version = "0.1.0-dev"
authors = [
    "David Kreuter <dkreuter@gmail.com>",
    "Sushant Dinesh <sushant.dinesh94@gmail.com>",
    "Shohei Kuroiwa <kotarou777775@gmail.com>"
]
build = "build.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
trace_log = ["log", "env_logger"]

[dev-dependencies]
quickcheck = "0.4.1"
quickcheck_macros = "0.7.0"

[build-dependencies]
lalrpop = "0.15.0"

[dependencies]
regex = "1.0.0"
petgraph = { version = "0.4.0", features = ["quickcheck"] }
serde_json = "1.0.0"
lazy_static = "1.0.0"
docopt = "1.0.0"
rayon = "1.0.0"
lalrpop-util = "0.15.0"
fixedbitset = "0.1.0"
either = "1.0.0"
vec_map = "0.8.0"
typed-arena = "1.3.0"
bit-set = "0.5.0"
num = "0.1.42"
linear-map = "1.2.0"
base64 = "0.9.2"

log = { version = "0.4.0", optional = true }
env_logger = { version = "0.5.0", optional = true }

[dependencies.r2pipe]
git = "https://github.com/radareorg/r2pipe.rs"

[dependencies.r2api]
git = "https://github.com/radare/radare2-r2pipe-api"
#path = "../radare2-r2pipe-api/rust/"

[dependencies.esil]
git = "https://github.com/radareorg/esil-rs"
#path = "../esil-rs"

# [dependencies.capstone_rust]
# git = "https://github.com/sushant94/capstone-rust"
