[package]
name = "radeco-lib"
version = "0.1.0-dev"
authors = [
    "David Kreuter <dkreuter@gmail.com>",
    "Sushant Dinesh <sushant.dinesh94@gmail.com>",
    "Shohei Kuroiwa <kotarou777775@gmail.com>"
]
build = "build.rs"
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
default = []
trace_log = ["log", "env_logger"]

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
regex = "1.3"

[dependencies]
regex = "1.3"
petgraph = { version = "0.5.0", features = ["quickcheck"] }
serde_json = "1.0"
lazy_static = "1.4"
docopt = "1.1"
rayon = "1.2"
lalrpop-util = "0.19"
fixedbitset = "0.3"
either = "1.5"
vec_map = "0.8"
typed-arena = "2.0"
bit-set = "0.5"
num = "0.2"
linear-map = "1.2.0"
base64 = "0.12"

log = { version = "0.4", optional = true }
env_logger = { version = "0.7", optional = true }

[dependencies.r2pipe]
git = "https://github.com/radareorg/r2pipe.rs"

[dependencies.r2api]
git = "https://github.com/radare/radare2-r2pipe-api"
#path = "../radare2-r2pipe-api/rust/"

[dependencies.esil]
#git = "https://github.com/radareorg/esil-rs"
path = "../esil-rs"

# [dependencies.capstone_rust]
# git = "https://github.com/sushant94/capstone-rust"
