[package]
name = "radeco"
version = "0.1.0"
authors = [
	"pancake <pancake@nopcode.org>",
	"Sushant <sushant.dinesh94@gmail.com>"
]

[features]
default = []
trace_log = ["radeco-lib/trace_log"]

[dependencies]
docopt = "*"
rustc-serialize = "*"
log = "*"
base64 = "0.9.2"
rustyline = "2.0.0"

[dependencies.r2pipe]
# path = "../r2pipe.rs"
git = "https://github.com/radareorg/r2pipe.rs"

[dependencies.r2api]
git = "https://github.com/radare/radare2-r2pipe-api"

[dependencies.radeco-lib]
# path = "../radeco-lib"
git = "https://github.com/radare/radeco-lib"

[profile.release]
lto = true
opt-level = 2
codegen-units = 4

[profile.dev]
lto = false
opt-level = 0
codegen-units = 4

# https://github.com/sfackler/rust-openssl/issues/994
[replace]
"openssl:0.9.24" = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }
