[package]
name = "radeco"
version = "0.1.0"
authors = [
	"pancake <pancake@nopcode.org>",
	"Sushant <sushant.dinesh94@gmail.com>"
]
build = "build.rs"

[build-dependencies]
toml = "*"

[features]
default = []
trace_log = ["radeco-lib/trace_log", "log", "env_logger"]

[dependencies]
rustc-serialize = "*"
base64 = "0.10.1"
rustyline = "4.1.0"
lazy_static = "1.3.0"
clap = "2.33.0"
syntect = "3.2.0"

log = { version = "0.4.6", optional = true }
env_logger = { version = "0.6.1", optional = true }

[dependencies.r2pipe]
# path = "../r2pipe.rs"
git = "https://github.com/radareorg/r2pipe.rs"

[dependencies.r2api]
git = "https://github.com/radare/radare2-r2pipe-api"

[dependencies.radeco-lib]
path = "../radeco-lib"
