[package]
name = "rune"
version = "0.1.0"
authors = ["Sushant <sushant.dinesh94@gmail.com>"]
edition = "2018"

[features]
default=[]

[[bin]]
name = "runec"
path = "runec/main.rs"

[dependencies]
petgraph = "*"
rustc-serialize = "*"
clippy = {version = "*", optional = true}
regex = "*"
docopt = "*"
rustyline = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"

[dependencies.libsmt]
git = "https://github.com/sushant94/libsmt.rs"

[dependencies.radeco-lib]
#git = "https://github.com/radare/radeco-lib"
path = "../radeco-lib"

[dependencies.esil]
#git = "https://github.com/radare/esil-rs"
path = "../esil-rs"

[dependencies.r2pipe]
git = "https://github.com/radareorg/r2pipe.rs"

[dependencies.r2api]
git = "https://github.com/radare/radare2-r2pipe-api"
