
[package]
name = "esil-fuzz"
version = "0.0.1"
authors = ["Radeco Developers"]
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies.esil]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "parser"
path = "fuzzers/parser.rs"
